--- a/sample.html
+++ b/sample.html
@@ -7,7 +7,7 @@
         <h1>deploy test</h1>
     </div>
     <div id="content">
-        <p>deployが成功するとでるはず！！！！！</p>
+        <p>deploy前。</p>
     </div>
 </body>
 </html>
