これでいいかな

--- a/sample.html
+++ b/sample.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>deploy test</title>
+    <link rel="stylesheet" type="text/css" href="./static/style.css" />
 </head>
 <body>
     <div id="header">
