--- a/sample.html
+++ b/sample.html
@@ -8,7 +8,7 @@
         <h1>deploy test</h1>
     </div>
     <div id="content">
-        <p>deploy前。</p>
+        <p>deployしましたよっと！</p>
     </div>
 </body>
 </html>
